InfraPlatform/eks/v3/cf-eks.yaml
AWSTemplateFormatVersion: 2010-09-09
## VPC-id, Subnets ID, ClusterSharedNodeSecurityGroup name, Cluster Control Plane name and Control Plane SecurityGroup name to be updated as per requirements.
Description: EKSPrivateCluster Version 3.0
Mappings:
  ServicePrincipalPartitionMap:
    aws:
      EC2: ec2.amazonaws.com
      EKS: eks.amazonaws.com
      EKSFargatePods: eks-fargate-pods.amazonaws.com
Parameters:
  AWSRegion:
    Type: String
    Description: AWS Region
    AllowedValues: 
      - ap-southeast-1
    Default: ap-southeast-1
  AppShortName:
    Type: String
    Description: AppShortName
  EnvName:
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c
    Description: Environment
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VpcId of your existing Virtual Private Cloud (VPC)
  AppSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: List of App Subnet IDs
  VPCSubnetCidrAppAZ1:
    Type: String
    Description: VPC Subnet CIDR for App AZ1
  VPCSubnetCidrAppAZ2:
    Type: String
    Description: VPC Subnet CIDR for App AZ2
  VPCSubnetCidrAppAZ3:
    Type: String
    Description: VPC Subnet CIDR for App AZ3
  AppIngressNodePort:
    Type: String
    Description: Port Number for AppIngress(Frontend) Nodes/Pods  
  InternalIngressNodePort:
    Type: String
    Description: Port Number for InternalIngress(Backend) Nodes/Pods
  HasCustomPorts:
    Type: String
    AllowedValues:
      - "true"
      - "false"
    Default: "false"
    Description: Enable custom port range for InternalIngressController
  CustomPortStart:
    Type: String
    Default: ""
    Description: Start of custom port range for InternalIngressController
  CustomPortEnd:
    Type: String
    Default: ""
    Description: End of custom port range for InternalIngressController
  HIPDeploymentServer01:
    Type: String
    Description: Ansible AutoDeployment IP
  HIPDeploymentServer02:
    Type: String
    Description: Ansible AutoDeployment IP
  HIPDeploymentServer03:
    Type: String
    Description: Ansible AutoDeployment IP
  DeploymentServerUTL01:
    Type: String
    Description: Deployment/Tooling Server 01
  NLBIngressSecurityGroupId:
    Type: String
    Description: Security Group ID of the NLB created in the NLB Ingress stack
  HSGWSubnet01:
    Type: String
    Description: HSGW Subnet/IP information
  HSGWSubnet02:
    Type: String
    Description: HSGW Subnet/IP information
  HSGWSubnet03:
    Type: String
    Description: HSGW Subnet/IP information
  PrefixListNLBIngress:
    Type: String
    Description: Prefix list for Whitelisted NLB Ingress
    Default: ""
  KMSKeyRotationPeriod:
    Type: Number
    Description: Number of days for KMS key rotation period (default 365 days)
    Default: 365
  VpcCidr1:
    Description: VPC CIDR 1 IP Range
    Type: String
    Default: ""
  VpcCidr2:
    Description: VPC CIDR 2 IP Range
    Type: String
    Default: ""
  VpcCidr3:
    Description: VPC CIDR 3 IP Range
    Type: String
    Default: ""
  S3PrefixListId:
    Description: S3 PrefixList ID
    Type: String
    Default: ""
  HCCVpceCidr:
    Description: HCC VPC Endpoint Subnet, Fixed CIDR Range from HCC
    Type: String
    Default: ""

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasVPCSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, '']]
  HasNLBIngressSecurityGroup: !Not [!Equals [!Ref NLBIngressSecurityGroupId, '']]
  HasHIPDeploymentServer03: !Not [!Equals [!Ref HIPDeploymentServer03, '']]
  HasHSGWSubnet01: !Not [!Equals [!Ref HSGWSubnet01, '']]
  HasHSGWSubnet02: !Not [!Equals [!Ref HSGWSubnet02, '']]
  HasHSGWSubnet03: !Not [!Equals [!Ref HSGWSubnet03, '']]
  HasVpcCidr3: !Not [!Equals [!Ref VpcCidr3, ""]]
  HasVpcCidr2: !Not [!Equals [!Ref VpcCidr2, ""]]
  HasS3PrefixListId: !Not [!Equals [!Ref S3PrefixListId, ""]]
  HasHCCVpceCidr: !Not [!Equals [!Ref HCCVpceCidr, ""]]
  HasCustomPorts: !Equals [!Ref HasCustomPorts, "true"]
  HasPrefixListNLBIngress: !Not [!Equals [!Ref PrefixListNLBIngress, '']]

Resources:
## KMS Key and Secret Keys
  EKSkmsKey:
    Type: 'AWS::KMS::Key'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      Description: KMS key for container secret keys
      EnableKeyRotation: true
      RotationPeriodInDays: !Ref KMSKeyRotationPeriod
      PendingWindowInDays: 7
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3
      KeyPolicy:
        Version: 2012-10-17
        Id: key-default-1
        Statement:
          - Sid: Enable IAM User Permissions
            Effect: Allow
            Principal:
              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
            Action: 'kms:*'
            Resource: '*'

  EKSkmsKeyAlias:
    Type: 'AWS::KMS::Alias'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AliasName: !Sub alias/${AppShortName}-${EnvName}-kms-eks-secretsencryption
      TargetKeyId: !Ref EKSkmsKey

## IAM Policy
  PolicySecretsManageraccess:
    Type: AWS::IAM::ManagedPolicy
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ManagedPolicyName: !Sub ${AppShortName}-${EnvName}-secretsmanageraccess-policy
      Description: Policy to allow access container secret keys
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - 'secretsmanager:GetResourcePolicy'
              - 'secretsmanager:GetSecretValue'
              - 'kms:Decrypt'
              - 'secretsmanager:DescribeSecret'
              - 'secretsmanager:ListSecretVersionIds'
            Resource:
              # - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${AppShortName}-${EnvName}-docker-*
              # - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${AppShortName}-${EnvName}-a-docker-*
              # - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${AppShortName}-${EnvName}-b-docker-*
              - !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${AppShortName}-${EnvName}-*
              - !GetAtt EKSkmsKey.Arn
          - Effect: Allow
            Action:
              - 'secretsmanager:GetRandomPassword'
              - 'secretsmanager:ListSecrets'
            Resource: '*'

  PolicyEKSLoadBalancerController:
    Type: 'AWS::IAM::ManagedPolicy'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ManagedPolicyName: !Sub ${AppShortName}-${EnvName}-eks-loadbalancerController-policy
      Description: EKS LoadBalancer Controller Policy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
            - iam:CreateServiceLinkedRole
            Resource: "*"
            Condition:
              StringEquals:
                iam:AWSServiceName: elasticloadbalancing.amazonaws.com
          - Effect: Allow
            Action:
            - ec2:DescribeAccountAttributes
            - ec2:DescribeAddresses
            - ec2:DescribeAvailabilityZones
            - ec2:DescribeInternetGateways
            - ec2:DescribeVpcs
            - ec2:DescribeVpcPeeringConnections
            - ec2:DescribeSubnets
            - ec2:DescribeSecurityGroups
            - ec2:DescribeInstances
            - ec2:DescribeNetworkInterfaces
            - ec2:DescribeTags
            - ec2:GetCoipPoolUsage
            - ec2:DescribeCoipPools
            - elasticloadbalancing:DescribeLoadBalancers
            - elasticloadbalancing:DescribeLoadBalancerAttributes
            - elasticloadbalancing:DescribeListeners
            - elasticloadbalancing:DescribeListenerCertificates
            - elasticloadbalancing:DescribeSSLPolicies
            - elasticloadbalancing:DescribeRules
            - elasticloadbalancing:DescribeTargetGroups
            - elasticloadbalancing:DescribeTargetGroupAttributes
            - elasticloadbalancing:DescribeTargetHealth
            - elasticloadbalancing:DescribeTags
            - elasticloadbalancing:DescribeTrustStores
            - elasticloadbalancing:DescribeListenerAttributes
            - elasticloadbalancing:DescribeCapacityReservation
            Resource: "*"
          - Effect: Allow
            Action:
            - cognito-idp:DescribeUserPoolClient
            - acm:ListCertificates
            - acm:DescribeCertificate
            - iam:ListServerCertificates
            - iam:GetServerCertificate
            - waf-regional:GetWebACL
            - waf-regional:GetWebACLForResource
            - waf-regional:AssociateWebACL
            - waf-regional:DisassociateWebACL
            - wafv2:GetWebACL
            - wafv2:GetWebACLForResource
            - wafv2:AssociateWebACL
            - wafv2:DisassociateWebACL
            - shield:GetSubscriptionState
            - shield:DescribeProtection
            - shield:CreateProtection
            - shield:DeleteProtection
            Resource: "*"
          - Effect: Allow
            Action:
            - ec2:AuthorizeSecurityGroupIngress
            - ec2:RevokeSecurityGroupIngress
            Resource: "*"
          - Effect: Allow
            Action:
            - ec2:CreateSecurityGroup
            Resource: "*"
          - Effect: Allow
            Action:
            - ec2:CreateTags
            Resource: arn:aws:ec2:*:*:security-group/*
            Condition:
              StringEquals:
                ec2:CreateAction: CreateSecurityGroup
              'Null':
                aws:RequestTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - ec2:CreateTags
            - ec2:DeleteTags
            Resource: arn:aws:ec2:*:*:security-group/*
            Condition:
              'Null':
                aws:RequestTag/elbv2.k8s.aws/cluster: 'true'
                aws:ResourceTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - ec2:AuthorizeSecurityGroupIngress
            - ec2:RevokeSecurityGroupIngress
            - ec2:DeleteSecurityGroup
            Resource: "*"
            Condition:
              'Null':
                aws:ResourceTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - elasticloadbalancing:CreateLoadBalancer
            - elasticloadbalancing:CreateTargetGroup
            Resource: "*"
            Condition:
              'Null':
                aws:RequestTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - elasticloadbalancing:CreateListener
            - elasticloadbalancing:DeleteListener
            - elasticloadbalancing:CreateRule
            - elasticloadbalancing:DeleteRule
            Resource: "*"
          - Effect: Allow
            Action:
            - elasticloadbalancing:AddTags
            - elasticloadbalancing:RemoveTags
            Resource:
            - arn:aws:elasticloadbalancing:*:*:targetgroup/*/*
            - arn:aws:elasticloadbalancing:*:*:loadbalancer/net/*/*
            - arn:aws:elasticloadbalancing:*:*:loadbalancer/app/*/*
            Condition:
              'Null':
                aws:RequestTag/elbv2.k8s.aws/cluster: 'true'
                aws:ResourceTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - elasticloadbalancing:AddTags
            - elasticloadbalancing:RemoveTags
            Resource:
            - arn:aws:elasticloadbalancing:*:*:listener/net/*/*/*
            - arn:aws:elasticloadbalancing:*:*:listener/app/*/*/*
            - arn:aws:elasticloadbalancing:*:*:listener-rule/net/*/*/*
            - arn:aws:elasticloadbalancing:*:*:listener-rule/app/*/*/*
          - Effect: Allow
            Action:
            - elasticloadbalancing:ModifyLoadBalancerAttributes
            - elasticloadbalancing:SetIpAddressType
            - elasticloadbalancing:SetSecurityGroups
            - elasticloadbalancing:SetSubnets
            - elasticloadbalancing:DeleteLoadBalancer
            - elasticloadbalancing:ModifyTargetGroup
            - elasticloadbalancing:ModifyTargetGroupAttributes
            - elasticloadbalancing:DeleteTargetGroup
            Resource: "*"
            Condition:
              'Null':
                aws:ResourceTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - elasticloadbalancing:AddTags
            Resource:
            - arn:aws:elasticloadbalancing:*:*:targetgroup/*/*
            - arn:aws:elasticloadbalancing:*:*:loadbalancer/net/*/*
            - arn:aws:elasticloadbalancing:*:*:loadbalancer/app/*/*
            Condition:
              StringEquals:
                elasticloadbalancing:CreateAction:
                - CreateTargetGroup
                - CreateLoadBalancer
              'Null':
                aws:RequestTag/elbv2.k8s.aws/cluster: 'false'
          - Effect: Allow
            Action:
            - elasticloadbalancing:RegisterTargets
            - elasticloadbalancing:DeregisterTargets
            Resource: arn:aws:elasticloadbalancing:*:*:targetgroup/*/*
          - Effect: Allow
            Action:
            - elasticloadbalancing:SetWebAcl
            - elasticloadbalancing:ModifyListener
            - elasticloadbalancing:AddListenerCertificates
            - elasticloadbalancing:RemoveListenerCertificates
            - elasticloadbalancing:ModifyRule
            Resource: "*"

  PolicyCloudWatchMetrics:
    Type: AWS::IAM::ManagedPolicy
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ManagedPolicyName: !Sub ${AppShortName}-${EnvName}-eks-CloudWatchMetrics-policy
      Description: Policy to allow updating the CloudWatchMetric Data
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - 'cloudwatch:PutMetricData'
            Effect: Allow
            Resource: '*'

  PolicyELBPermissions:
    Type: 'AWS::IAM::ManagedPolicy'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ManagedPolicyName: !Sub ${AppShortName}-${EnvName}-eks-ELBPermissions-policy
      Description: EKS ELBPermission Policy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - 'ec2:DescribeAccountAttributes'
              - 'ec2:DescribeAddresses'
              - 'ec2:DescribeInternetGateways'
            Effect: Allow
            Resource: '*'

  PolicySQSaccess:
    Type: AWS::IAM::ManagedPolicy
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      ManagedPolicyName: !Sub ${AppShortName}-${EnvName}-sqs-access-policy
      Description: Policy to allow access sqs
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action:
              - 'sqs:DeleteMessage'
              - 'sqs:GetQueueUrl'
              - 'sqs:ListDeadLetterSourceQueues'
              - 'sqs:ChangeMessageVisibility'
              - 'sqs:PurgeQueue'
              - 'sqs:ReceiveMessage'
              - 'sqs:DeleteQueue'
              - 'sqs:SendMessage'
              - 'sqs:GetQueueAttributes'
              - 'sqs:ListQueueTags'
              - 'sqs:CreateQueue'
              - 'sqs:SetQueueAttributes'
            Resource:
              - !Sub arn:aws:sqs:${AWSRegion}:${AWS::AccountId}:${AppShortName}-${EnvName}-sqs-*

## IAM Roles
  eksNodeRole:
    Type: 'AWS::IAM::Role'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
      RoleName: !Sub ${AppShortName}-${EnvName}-eks-Node-role
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

  FargatePodExecutionRole:
    Type: 'AWS::IAM::Role'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service:
                - !FindInMap 
                  - ServicePrincipalPartitionMap
                  - !Ref 'AWS::Partition'
                  - EKSFargatePods
        Version: 2012-10-17
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      RoleName: !Sub ${AppShortName}-${EnvName}-fargate-PodExecution-role
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

  eksClusterServiceRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - eks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
        - arn:aws:iam::aws:policy/AmazonEKSVPCResourceController
        - !Ref PolicyCloudWatchMetrics
        - !Ref PolicyELBPermissions
      RoleName: !Sub ${AppShortName}-${EnvName}-eks-ClusterService-role
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

## Security Group
  AppIngressControllerSG:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupDescription: Security Group for App Ingress Controller ALB
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-app-ingress-controller
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-app-ingress-controller
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow App Subnet AZ2
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasNLBIngressSecurityGroup
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            SourceSecurityGroupId: !Ref NLBIngressSecurityGroupId
            Description: Allow access from NLB Ingress security group
          - !Ref "AWS::NoValue"
        - !If
          - HasHSGWSubnet01
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HSGWSubnet01
            Description: Allow HSGW subnet1
          - !Ref "AWS::NoValue"
        - !If
          - HasHSGWSubnet02
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HSGWSubnet02
            Description: Allow HSGW subnet2
          - !Ref "AWS::NoValue"
        - !If
          - HasHSGWSubnet03
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HSGWSubnet03
            Description: Allow HSGW subnet3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref DeploymentServerUTL01
          Description: Deployment Server 01
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow App Subnet AZ2
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 8443
            ToPort: 8443
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
  InternalIngressControllerSG:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupDescription: Security Group for Internal Ingress Controller ALB
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-Internal-IngressAlb
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-Internal-IngressAlb
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow App Subnet AZ2
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasPrefixListNLBIngress
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            SourcePrefixListId: !Ref PrefixListNLBIngress
          - !Ref "AWS::NoValue"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 8443
            ToPort: 8443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 8443
            ToPort: 8443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"  

  ClusterSharedNodeSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-ClusterSharedNode
      GroupDescription: Communication between all nodes in the cluster
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-ClusterSharedNode
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: Allow HTTPS egress to VPC CIDR 1
        - !If
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: Allow HTTPS egress to VPC CIDR 2
          - !Ref AWS::NoValue
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: Allow HTTPS egress to VPC CIDR 3
          - !Ref AWS::NoValue
        - !If
          - HasHCCVpceCidr
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HCCVpceCidr
            Description: HCC VPC Endpoint Subnet
          - !Ref "AWS::NoValue"

  ControlPlaneSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub ${AppShortName}-${EnvName}-sg-ControlPlane
      GroupDescription: Communication between the control plane and worker nodegroups
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-sg-ControlPlane
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow App Subnet AZ2
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref HIPDeploymentServer01
          Description: Ansible AutoDeployment Server 01
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref HIPDeploymentServer02
          Description: Ansible AutoDeployment Server 02
        - !If
          - HasHIPDeploymentServer03
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HIPDeploymentServer03
            Description: Ansible AutoDeployment Server 03
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref DeploymentServerUTL01
          Description: Deployment Server 01
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"   
        - IpProtocol: tcp
          FromPort: 10250
          ToPort: 10250
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow communication to self on port 10250 App subnet AZ1
        - IpProtocol: tcp
          FromPort: 10250
          ToPort: 10250
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow communication to self on port 10250 App subnet AZ2
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 10250
            ToPort: 10250
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow communication to self on port 10250 App subnet AZ3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 53
          ToPort: 53
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 53
            ToPort: 53
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 53
            ToPort: 53
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - IpProtocol: udp
          FromPort: 53
          ToPort: 53
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: udp
            FromPort: 53
            ToPort: 53
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: udp
            FromPort: 53
            ToPort: 53
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasS3PrefixListId
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            DestinationPrefixListId: !Ref S3PrefixListId
            Description: Allow access to Amazon S3 Endpoint
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: Allow App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: Allow App Subnet AZ2
        - !If
          - HasVPCSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 8443
            ToPort: 8443
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasHCCVpceCidr
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HCCVpceCidr
            Description: HCC VPC Endpoint Subnet
          - !Ref "AWS::NoValue"
        - !If
          - HasCustomPorts
          - IpProtocol: tcp
            FromPort: !Ref CustomPortStart
            ToPort: !Ref CustomPortEnd
            CidrIp: !Ref VPCSubnetCidrAppAZ1
            Description: Allow Custom ports for App Ingress AZ1
          - !Ref "AWS::NoValue"
        - !If
          - HasCustomPorts
          - IpProtocol: tcp
            FromPort: !Ref CustomPortStart
            ToPort: !Ref CustomPortEnd
            CidrIp: !Ref VPCSubnetCidrAppAZ2
            Description: Allow Custom ports for App Ingress AZ2
          - !Ref "AWS::NoValue"
        - !If
          - HasCustomPorts
          - !If
            - HasVPCSubnetCidrAppAZ3
            - IpProtocol: tcp
              FromPort: !Ref CustomPortStart
              ToPort: !Ref CustomPortEnd
              CidrIp: !Ref VPCSubnetCidrAppAZ3
              Description: Allow Custom ports for App Ingress AZ3
            - !Ref "AWS::NoValue"
          - !Ref "AWS::NoValue"
        
  IngressDefaultClusterToNodeSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]  
    Properties:
      Description: >-
        Allow managed and unmanaged nodes to communicate with each other (all
        ports)
      FromPort: 0
      GroupId: !Ref ClusterSharedNodeSecurityGroup
      IpProtocol: '-1'
      SourceSecurityGroupId: !GetAtt 
        - ControlPlane
        - ClusterSecurityGroupId
      ToPort: 65535
      
  IngressInterNodeGroupSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow nodes to communicate with each other (all ports)
      FromPort: 0
      GroupId: !Ref ClusterSharedNodeSecurityGroup
      IpProtocol: '-1'
      SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
      ToPort: 65535

  IngressNodeToDefaultClusterSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow unmanaged nodes to communicate with control plane (all ports)
      FromPort: 0
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      IpProtocol: '-1'
      SourceSecurityGroupId: !Ref ClusterSharedNodeSecurityGroup
      ToPort: 65535

#AppIngressController access to Fargate pods
  AppIngressToDefaultClusterSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow the communication from AppIngress to Fargate Pods
      FromPort: !Ref AppIngressNodePort
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt AppIngressControllerSG.GroupId
      ToPort: !Ref AppIngressNodePort

#InternalIngressController access to Fargate pods
  InternalIngressToDefaultClusterSG:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow the communication from Internal Ingress to Fargate Pods
      FromPort: !Ref InternalIngressNodePort
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt InternalIngressControllerSG.GroupId
      ToPort: !Ref InternalIngressNodePort

  # InternalIngressController custom ports access to Fargate pods
  InternalIngressToDefaultClusterCustomPortsSG:
    Condition: HasCustomPorts
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allow Internal Ingress to Fargate Pods on custom ports
      FromPort: !Ref CustomPortStart
      ToPort: !Ref CustomPortEnd
      IpProtocol: tcp
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      SourceSecurityGroupId: !GetAtt InternalIngressControllerSG.GroupId

  # EgressController access to Fargate pods
  EgressControllerToDefaultClusterSGVPCCidr1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Allow the communication from EgressController to Fargate Pods
      FromPort: 443
      ToPort: 443
      IpProtocol: tcp
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      CidrIp: !Ref VpcCidr1

  EgressControllerToDefaultClusterSGVPCCidr2:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: HasVpcCidr2
    Properties:
      Description: Allow the communication from EgressController to Fargate Pods
      FromPort: 443
      ToPort: 443
      IpProtocol: tcp
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      CidrIp: !Ref VpcCidr2

  EgressControllerToDefaultClusterSGVPCCidr3:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: HasVpcCidr3
    Properties:
      Description: Allow the communication from EgressController to Fargate Pods
      FromPort: 443
      ToPort: 443
      IpProtocol: tcp
      GroupId: !GetAtt
        - ControlPlane
        - ClusterSecurityGroupId
      CidrIp: !Ref VpcCidr3
  
  ControlPlane:
    Type: 'AWS::EKS::Cluster'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      KubernetesNetworkConfig:
        IpFamily: ipv4
      Name: !Sub ${AppShortName}-${EnvName}-app-eks  
      ResourcesVpcConfig:
        EndpointPrivateAccess: true
        EndpointPublicAccess: false
        SecurityGroupIds:
          - !Ref ControlPlaneSecurityGroup
        SubnetIds: !Ref AppSubnetIds
      Logging:
        ClusterLogging:
          EnabledTypes:
            - Type: api
            - Type: audit
            - Type: authenticator
            - Type: controllerManager
            - Type: scheduler
      RoleArn: !GetAtt eksClusterServiceRole.Arn
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

  EKSAddon:
    Type: AWS::EKS::Addon
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties: 
      AddonName: coredns
#      AddonVersion: String
      ClusterName: !Ref ControlPlane
#      ConfigurationValues: String
#      PreserveOnDelete: Boolean
      ResolveConflicts: OVERWRITE
#      ServiceAccountRoleArn: String
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

# EKS Fargate Profile
  EKSFargateProfileDefault:
    Type: 'AWS::EKS::FargateProfile'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      FargateProfileName: fp_default
      ClusterName: !Ref ControlPlane
      PodExecutionRoleArn: !GetAtt FargatePodExecutionRole.Arn
      Subnets: !Ref AppSubnetIds
      Selectors:
        - Namespace: default
        - Namespace: kube-system
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

# EKS Fargate Profile for monitoring
  EKSFargateProfilemonitoring:
    Type: 'AWS::EKS::FargateProfile'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      FargateProfileName: fp_monitoring
      ClusterName: !Ref ControlPlane
      PodExecutionRoleArn: !GetAtt FargatePodExecutionRole.Arn
      Subnets: !Ref AppSubnetIds
      Selectors:
        - Namespace: fargate-container-insights
        - Namespace: opentelemetry-operator-system
        - Namespace: cert-manager
        - Namespace: aws-observability
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3
    DependsOn:
      - EKSFargateProfileDefault

  EKSLoadBalancerControllerRole:
    Type: AWS::IAM::Role
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument: !Sub
        - |
          {
            "Version": "2012-10-17",
            "Statement": [
              {
                "Effect": "Allow",
                "Principal": {
                  "Federated": "arn:aws:iam::${AWS::AccountId}:oidc-provider/${OidcProviderEndpoint}"
                },
                "Action": "sts:AssumeRoleWithWebIdentity",
                "Condition": {
                  "StringEquals": {
                    "${OidcProviderEndpoint}:aud": "sts.amazonaws.com",
                    "${OidcProviderEndpoint}:sub": "system:serviceaccount:kube-system:aws-load-balancer-controller"
                  }
                }
              }
            ]
          }
        - OidcProviderEndpoint: !Select [1, !Split ["//", !GetAtt ControlPlane.OpenIdConnectIssuerUrl]]
      ManagedPolicyArns:
        - !Ref PolicyEKSLoadBalancerController
      RoleName: !Sub ${AppShortName}-${EnvName}-AmazonEKSLoadBalancerControllerRole
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

#EKS OTEL Service Account Role
  otelServiceAccountRole:
    Type: AWS::IAM::Role
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AssumeRolePolicyDocument: !Sub
        - |
          {
            "Version": "2012-10-17",
            "Statement": [
              {
                "Effect": "Allow",
                "Principal": {
                  "Federated": "arn:aws:iam::${AWS::AccountId}:oidc-provider/${OidcProviderEndpoint}"
                },
                "Action": "sts:AssumeRoleWithWebIdentity",
                "Condition": {
                  "StringEquals": {
                    "${OidcProviderEndpoint}:aud": "sts.amazonaws.com",
                    "${OidcProviderEndpoint}:sub": "system:serviceaccount:opentelemetry-operator-system:otel-collector"
                  }
                }
              }
            ]
          }
        - OidcProviderEndpoint: !Select [1, !Split ["//", !GetAtt ControlPlane.OpenIdConnectIssuerUrl]]
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonPrometheusRemoteWriteAccess
        - arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      RoleName: !Sub ${AppShortName}-${EnvName}-eks-otel-svc-acc-role
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

  EKSFargateLogGroup:
    Type: AWS::Logs::LogGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      LogGroupName: !Sub ${AppShortName}-${EnvName}-eks-fargate-logs
      RetentionInDays: 365
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v3

# Parameters will be referenced by EKS Fargate Profile Template
  ParameterEKSControlPlane: #Parameter for EKS Control Plane
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-EKSControlPlane
      Description: !Sub ${AppShortName}-${EnvName}-parameter-EKSControlPlane
      Value: !Ref ControlPlane
      Type: String
      Tier: Standard
      Tags:
        IaCVersion: InfraPlatform-EKS-v3

  ParameterFargatePodExecutionRoleArn: #Parameter for Fargate Pod Execution Role ARN
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-FargatePodExecutionRoleArn
      Description: !Sub ${AppShortName}-${EnvName}-parameter-FargatePodExecutionRoleArn
      Value: !GetAtt FargatePodExecutionRole.Arn
      Type: String
      Tier: Standard
      Tags:
        IaCVersion: InfraPlatform-EKS-v3

  ParameterSecretManagerIamPolicyArn: #Parameter for Secret Manager IAM Policy ARN
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-SecretManagerIamPolicyArn
      Description: !Sub ${AppShortName}-${EnvName}-parameter-SecretManagerIamPolicyArn
      Value: !Ref PolicySecretsManageraccess
      Type: String
      Tier: Standard
      Tags:
        IaCVersion: InfraPlatform-EKS-v3

  ParameterSQSIamPolicyArn: #Parameter for SQS IAM Policy ARN
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-SQSIamPolicyArn
      Description: !Sub ${AppShortName}-${EnvName}-parameter-SQSIamPolicyArn
      Value: !Ref PolicySQSaccess
      Type: String
      Tier: Standard
      Tags:
        IaCVersion: InfraPlatform-EKS-v3

  ParameterOidcProviderEndpoint: #Parameter for OIDC Provider Endpoint URL
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-OidcProviderEndpoint
      Description: !Sub ${AppShortName}-${EnvName}-parameter-OidcProviderEndpoint
      Value: !Select [1, !Split ["//", !GetAtt ControlPlane.OpenIdConnectIssuerUrl]]
      Type: String
      Tier: Standard
      Tags:
        IaCVersion: InfraPlatform-EKS-v3

  ParameterEKSkmsKeyId: #Parameter for EKS KMS Key
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-parameter-EKSkmsKeyId
      Description: !Sub ${AppShortName}-${EnvName}-parameter-EKSkmsKeyId
      Value: !Ref EKSkmsKey
      Type: String
      Tier: Standard
      Tags:
        IaCVersion: InfraPlatform-EKS-v3
